rewrite the summary view to do fewer queries